--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,7 @@
         "arrowParens": "avoid",
         "bracketSpacing": false,
         "jsxBracketSameLine": true,
+        "semi-colon": false,
         "printWidth": 80,
         "singleQuote": true,
         "trailingComma": "es5"
